[#49439] Temporarily delegate all matches to another user.
[#49439] AD creds.

[#49439] No duplicate users in dropdown.

[#49439] Added delegation message.

[#49439] Popup and frontend.

--- a/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load l10n %}
 {% load humanize %}
+{% load static %}
 
 {% with type=document_report.matches.handle|find_type_label %}
   {% for frag in document_report.matches.matches %}
@@ -53,6 +54,14 @@
                 {% endif %}
               {% endif %}
             </div>
+            {% if document_report.alias_relation.all and document_report.alias_relation.first.user != request.user %}
+            <div class="delegated-by">
+              {% trans "Delegated by: " %}{{ document_report.alias_relation.first.user.get_full_name }}
+              <span title="{{ document_report.alias_relation.first.user.profile.delegate_all_message }}">
+                <img src="{% static "svg/question-circle.svg" %}">
+              </span>
+            </div>
+            {% endif %}
             {% if document_report.last_opened_time %}
               {% with document_report.last_opened_time|naturaltime as time_since %}
               <div class='last-opened'>
