--- a/src/os2datascanner/projects/static/scss/components/_options.scss
+++ b/src/os2datascanner/projects/static/scss/components/_options.scss
@@ -100,6 +100,11 @@ label+.dropdown {
       width: 30rem;
       height: 8rem;
     }
+
+    &#delegate_to {
+      width: 100%;
+    }
+
   }
 
   /* Hide arrow icon in IE browsers */
