--- a/src/os2datascanner/projects/report/reportapp/templates/user.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/user.html
@@ -1,4 +1,5 @@
 {%  load i18n %}
+{% load static %}
 {% include "partials/header.html" %}
 {% include "components/banner.html" %}
 
@@ -12,4 +13,7 @@
     </main>
 
 </body>
+
+<script src={% static "3rdparty/htmx.min.js" %}></script>
+
 </html>
