--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scan_completed.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scan_completed.html
@@ -1,13 +1,15 @@
 {% extends 'partials/base.html' %}
+{% load static %}
 {% load l10n %}
 {% load i18n %}
 {% load tz %}
 
 {% block body %}
+{% if not request.headers.hx_request %}
 {% include "partials/header.html" %}
-<main class="wrapper">
+<main class="wrapper" hx-headers='{"X-CSRFToken": "{{csrf_token}}"}'>
     {% include "partials/main.html" with active_tab="status" %}
-
+    {% endif %}
     <div class="content">
 
         {% include "os2datascanner/scanner_tabs.html" with page="scan-status"  %}
@@ -25,22 +27,37 @@
               <col class="datatable__column--name">
               <col class="datatable__column--org">
               <col class="datatable__column--info">
+              <col class="datatable__column--status">
+              {% if user.is_superuser %}
               <col class="datatable__column--actions">
+              {% endif %}
             </colgroup>
             <thead>
-              <tr>
+              
+              <tr class="column-headings">
                 <th class="datatable__column--name">
-                  {% trans "Scannerjob" %}
+                    {% trans "Scannerjob" %}
                 </th>
                 <th class="datatable__column--org">
-                  {% trans "Started" %}
+                    {% trans "Started" %}
                 </th>
                 <th class="datatable__column--info">
-                  {% trans "Objects" %}
+                    {% trans "Objects" %}
                 </th>
+                <th class="datatable__column--status">
+                    {% trans "Status" %}
+                </th>
+                {% if user.is_superuser %}
                 <th class="datatable__column--actions">
-                  {% trans "Status" %}
+                    {% trans "Actions" %}
+                    <button type="button" class="button button--has-icon" name="status-resolved-all"
+                            hx-post="" hx-swap="outerHTML" hx-trigger="click" hx-target=".content"
+                            hx-confirm="{% trans "You are about to delete all scan status data. This action cannot be reverted. Are you sure?" %}"
+                            >
+                    <i class="material-icons text-secondary" aria-hidden="true">close</i><span>{% trans "Delete all" %}</span>
+                    </button>
                 </th>
+                {% endif %}
               </tr>
             </thead>
 
@@ -67,6 +84,18 @@
                         </span>
                       </span>
                     </td>
+                    {% if user.is_superuser %}
+                    <td class="datatable__column--actions">
+                      <div class="action-wrapper">
+                        <button type="button" class="button" name="status-resolved"
+                          hx-post="" hx-swap="outerHTML" hx-trigger="click" hx-target=".content" hx-vals='{"pk": "{{ status.pk|unlocalize }}"}' hx-indicator="closest tr">
+                          <svg class="icon">
+                            <use xlink:href="/static/svg/symbol-defs.svg#icon-cross"></use>
+                          </svg>
+                        </button>
+                      </div>
+                    </td>
+                    {% endif %}
                   </tr>
                 {% endif %}
               {% endfor %}
@@ -81,5 +110,7 @@
         </p>
         {% endif %}
     </div>
+    {% if not request.headers.hx_request %}
 </main>
+{% endif %}
 {% endblock %}
