--- a/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
@@ -57,7 +57,7 @@
             {% if document_report.alias_relation.all and document_report.alias_relation.first.user != request.user %}
             <div class="delegated-by">
               {% trans "Delegated by: " %}{{ document_report.alias_relation.first.user.get_full_name }}
-              <span title="{{ document_report.alias_relation.first.user.account.delegate_all_message }}">
+              <span title="{{ document_report.alias_relation.first.user.get_full_name }}{% if document_report.alias_relation.first.user.account.delegate_all_message %}{% trans " has asked you to handle this match with the following message:&#013;" %}{{ document_report.alias_relation.first.user.account.delegate_all_message }}{% else %}{% trans " has asked you to handle this match." %}{% endif %}">
                 <img src="{% static "svg/question-circle.svg" %}">
               </span>
             </div>
