--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics-template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics-template.html
@@ -33,7 +33,7 @@
 
   <div class="statistic_wrapper">
 
-    <!-- Line chart -->
+    <!-- Bar chart -->
     <div class="statistic">
       <div class="statistic_header">
         <div>
@@ -51,10 +51,10 @@
         </div>
       </div>
       <div class="chart_container" data-chartid="development-new-results">
-        <canvas class="line_chart" id="line_chart_new_matches_by_month"></canvas>
+        <canvas class="bar_chart" id="bar_chart_new_matches_by_month"></canvas>
       </div>
       <div class="hidden chart_container" data-chartid="development-unhandled-results">
-        <canvas class="line_chart" id="line_chart_unhandled_matches"></canvas>
+        <canvas class="bar_chart" id="bar_chart_unhandled_matches"></canvas>
       </div>
     </div>
 
