--- a/src/os2datascanner/projects/report/reportapp/templates/statistics.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/statistics.html
@@ -17,6 +17,6 @@
 <script src="{% static "js/chartHelpers.js" %}"></script>
 <script src="{% static "js/pieCharts.js" %}"></script>
 <script src="{% static "js/doughnutCharts.js" %}"></script>
-<script src="{% static "js/lineCharts.js" %}"></script>
+<script src="{% static "js/barCharts.js" %}"></script>
 
 {% endblock %}
