[#53138] Trying to make sure that rules keep their info.

--- a/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
@@ -175,11 +175,13 @@ Marking a result as handled will only remove the result from OS2datascanner.{% e
         <td colspan="{% if request.path == "/" %}6{% elif request.path == "/archive" %}7{% endif %}">
           <table class="smaller datatable compressed">
             <colgroup>
+              <col class="matches-list__column--rule">
               <col class="matches-list__column--match dont-break-out">
               <col class="matches-list__column--context">
               <col class="matches-list__column--probability" hidden>
             </colgroup>
             <thead>
+              <th>{% trans "Rule" %}</th>
               <th>{% trans "Anonymized match" %}</th>
               <th>{% trans "Context" %}</th>
               <th class="text-align-right matches-list__column--probability" hidden>{% trans "Probability" %}</th>
