--- a/src/os2datascanner/projects/report/reportapp/templates/statistics.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/statistics.html
@@ -10,8 +10,8 @@
 </main>
 {% block scripts %}
 <script src="{% static "3rdparty/jquery-3.6.0.min.js" %} "></script>
-<script src="{% static "3rdparty/chart-2.9.4.min.js" %}"></script>
-<script src="{% static "3rdparty/chartjs-plugin-datalabels.js" %}"></script>
+<script src="{% static "3rdparty/chart-4.0.1.min.js" %}"></script>
+{% comment %} <script src="{% static "3rdparty/chartjs-plugin-datalabels.js" %}"></script> {% endcomment %}
 <script src="{% static "js/chartHelpers.js" %}"></script>
 <script src="{% static "js/pieCharts.js" %}"></script>
 <script src="{% static "js/doughnutCharts.js" %}"></script>
