[#43853] Populate UI with data from backend
Format response analysis template.

Update URL path structure.

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/navigation/navigation.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/navigation/navigation.html
@@ -28,7 +28,7 @@
       {% endif %}
       {% if settings.ANALYSIS_PAGE %}
         <li>
-          <a href="/analysis"
+          <a href="/analysis/overview"
              class="{% if active_tab == 'analysis' %}active{% endif %}">
             {% include "components/svg-icons/analysis.svg" %}
             <span class="width">{% trans "Analysis" %}</span>
