--- a/src/os2datascanner/projects/admin/adminapp/templates/components/analysis/analysis_template.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/analysis/analysis_template.html
@@ -1,4 +1,3 @@
-
 <div class="content" hx-push-url="true">
   {% load i18n %}
   {% load l10n %}
@@ -107,3 +106,5 @@
     <iframe src="about:blank" frameborder="0"></iframe>
   </div>
 {% endblock %}
+
+{{ chart_data|json_script:"chart_data" }}
