--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_run.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_run.html
@@ -15,6 +15,8 @@
 <div class="runner-container">
 {% if scan_tag %}
 
+<pre>Ugly</pre>
+
   <div class="runner-content">
     <span class="icon">
       {% include "components/svg-icons/scan_succes.svg" %}
