--- a/src/os2datascanner/projects/report/reportapp/templates/content.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/content.html
@@ -41,6 +41,7 @@
               hx-trigger="click"
               hx-swap="afterend"
               hx-post="{% url "distribute" %}"
+              hx-post=""
               hx-include="[name='distribute-to']"
               hx-push-url="false">
         {% trans "Distribute" %}
