--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
@@ -11,7 +11,8 @@
        hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
        hx-push-url='true'>
 
-    <a class="button" href="{% url "organization-list" %}">← {% trans "Return to organization overview" %}</a>
+    {% include "partials/breadcrumb.html" with page="orgunit_views" %}
+
     {% if FEATURES.ORG_STRUCTURE in organization.client.enabled_features and orgunit_list.exists %}
       <h1>{% trans "organizational hierarchy for"|capfirst %} {{ organization }}</h1>
       <form name="orgunit_filters"
