--- a/src/os2datascanner/projects/admin/adminapp/templates/partials/breadcrumb.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/partials/breadcrumb.html
@@ -81,6 +81,18 @@
     <span class="text-grey">{% trans "update organization"|capfirst %}</span>
   {% endif %}
 
+  {% if page == 'orgunit_views' %}
+    <a href="/organizations/" class="link-color">{% trans "organizations"|capfirst %}</a>
+
+    <i id="chevron_right" class="material-icons">chevron_right</i>
+
+    <span class="text-grey">{{ organization }}</span>
+
+    <i id="chevron_right" class="material-icons">chevron_right</i>
+
+    <span class="text-grey">{% trans "organizational units"|capfirst %}</span>
+  {% endif %}
+
   {% if page == 'ldap' %}
     <a href="/organizations/" class="link-color">{% trans "organizations"|capfirst %}</a>
 
