--- a/src/os2datascanner/projects/static/scss/components/_datatable.scss
+++ b/src/os2datascanner/projects/static/scss/components/_datatable.scss
@@ -184,6 +184,14 @@
       width: 80%;
     }
 
+    &--accounts {
+      width: 150%;
+    }
+
+    &--managers {
+      width: 200%;
+    }
+
     &--matchcount {
       width: 5.5rem;
       display: none;
